# linkengine

./: .gitignore  README.md  conftest.py  dev_precision_handout.md  dev_precision_triage.py  pyproject.toml
dev/: dev_precision_handout.md  dev_precision_triage.py
examples/: annotated.html  quickstart.ipynb
linkengine/: __init__.py  aliases.py  assembler.py  budget_laws.py  catalog.py  context.py  conventions.py  engine.py  geo.py  html.py  model.py  normalize.py  partitions.py  recognizers.py  runner.py  special_cases.py  urn.py
linkengine/data/: municipalities.txt
tests/: bench_full_docs.py  goldeval.py  test_full_documents.py  test_gold.py  test_linkengine.py  test_repair_preleggi_csvs.py
tests/benchmark_docs/: README.md  admin_consiglio_stato_2021_2023.txt  admin_consiglio_stato_2026_255.txt  admin_tar_catania_2026_368.txt  admin_tar_lazio_2026_2731.txt  admin_tar_sicilia_2021_2023.txt  admin_tar_toscana_2026_1122.txt  bdgt_sentenza_u01_106_2022.txt  bdgt_sentenza_u01_110_2022.txt  bdgt_sentenza_u59_465_2022.txt  bdgt_sentenza_v10_2303_2026.txt  bdgt_sentenza_v28_898_2022.txt  bdgt_sentenza_v40_7014_2025.txt  bdgt_sentenza_v46_885_2026.txt  bdgt_sentenza_v92_525_2025.txt  bdgt_sentenza_z01_745_2022.txt  bdgt_sentenza_z11_548_2025.txt  bdgt_sentenza_z46_788_2026.txt  bdgt_sentenza_z46_8121_2022.txt  bdgt_sentenza_z55_3804_2022.txt  cass_2018_12769_civ.txt  cass_2018_17793_tax_civ.txt  cass_2018_25504_tax_civ.txt  cass_2018_32458_pen.txt  cass_2025_20045_civ.txt  cass_2025_30680_civ.txt  (+38 more)
tools/: __init__.py  full_doc_annotator.py  repair_preleggi_csvs.py
(+5 files in other folders)
